Thu Apr 20 09:05:39 CEST 2006  Isak Savo <isak.savo@gmail.com>

	* plugins/autoaway/xscreensaver.c:
	  - Fix a crash with xscreensaver backend. (Launchpad: #39461)
	  - Make autoaway work on non-english systems

Tue Apr 18 17:30:14 MDT 2006  Brian Pepple <bdpepple@ameritech.net>

	* plugins/perl/perl.c:
	* plugins/dbus/xchat-gnome-remote.c:
	* src/common/outbound.c:
	* src/common/servlist.c:
	* src/common/cfgfiles.c:
	* src/common/plugin.c:
	* src/common/ctcp.c:
	* src/fe-gnome/preferences.c:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/about.c:
	* src/fe-gnome/setup-dialog.c:
	* configure.ac:
	  - Drop version from AM_INIT_AUTOMAKE, and use AutoConf's macros for
	    package & version. (#337435)

Fri Apr 14 00:40:02 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network.c:
	  - Avoid to set empty password for server and
	    nickserv. (#338060)

Thu Apr 13 23:14:52 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/preferences.c:
	  - Set nick_ as first alternative nickname. (#338061)

Wed Apr 12 15:44:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.desktop.in.in:
	  - Remove the Application category.

Wed Apr 12 17:27:27 CEST 2006  Gathy Grégory <gigooo@gmail.com>

	* src/fe-gnome/preferences-page-plugins.c:
	* data/preferences-dialog.glade:
	  - Replace the gtk_tree_view by a sexy_tree_view when compiled
	    with libsexy support too see the description of the plugin
	    in a tooltip. (#338207)

Tue Apr 11 19:16:48 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Fix crash on right click if no server connected. (#338105)

Sun Apr  9 12:07:44 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	  - Add a conversation_panel_copy_selection () method.
	* src/fe-gnome/main-window.c:
	  - When we hit ctrl-V we copy the selection from the text entry